[project]
name = "odoo-addons-oca-tier-validation"
version = "19.0.20260513.2"
dependencies = [
    "odoo-addon-account_move_tier_validation==19.0.*",
    "odoo-addon-base_tier_validation==19.0.*",
    "odoo-addon-base_tier_validation_correction==19.0.*",
    "odoo-addon-base_tier_validation_formula==19.0.*",
    "odoo-addon-base_tier_validation_forward==19.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 19.0",
]
